# Wallet

./: .env  .gitignore  Dockerfile  README.md  SQL.txt  celeryworker1-entrypoint.sh  celeryworker2-entrypoint.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
api/v1/: urls.py
core/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/api/: test_user.py  test_wallet.py
user/: admin.py  managers.py  models.py  permissions.py  serializers.py  services.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_birthdate.py  0003_categories_user_categories.py  0004_alter_categories_options.py  0005_remove_user_birthdate.py
wallet/: admin.py  models.py  permissions.py  serializers.py  tasks.py  views.py
wallet/migrations/: 0001_initial.py  0002_remove_transaction_category_delete_categories_and_more.py  0003_remove_organization_location.py  0004_transaction_income.py  0005_alter_transaction_description.py  0006_alter_transaction_category.py
